--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,14 +1,15 @@
-//base
+//BASE
 @import 'variables';
 @import 'base';
 
-//header
+//HEADER
 @import 'header';
 
-//auth
+//AUTH
 @import 'signin';
 @import 'signup';
 
-//helpers
+//HELPERS
 @import 'formTitle';
 @import 'formFields';
+@import 'textLink';
